feat: add state global filter